<package>
  <name>dvo_core</name>
  <version>0.1.0</version>
  <description>
    dvo_core
  </description>
  <maintainer email="christian.kerl@in.tum.de">Christian Kerl</maintainer>
  <license>GPL</license>

  <url>https://github.com/tum-vision/dvo_slam</url>
  <author>Christian Kerl</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>

  <build_depend>libpcl-all-dev</build_depend>
  <!--build_depend>sophus</build_depend-->
  <build_depend>libopencv-dev</build_depend>
  
  <run_depend>libpcl-all</run_depend>
  <run_depend>libopencv-dev</run_depend>
</package>
