<package>
  <name>dvo_slam</name>
  <version>0.1.0</version>
  <description>
    dvo_slam
  </description>
  <maintainer email="christian.kerl@in.tum.de">Christian Kerl</maintainer>
  <license>GPL</license>

  <url>https://github.com/tum-vision/dvo_slam</url>
  <author>Christian Kerl</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>

  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>libopencv-dev</build_depend>
  <build_depend>libg2o</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>

  <build_depend>dvo_core</build_depend>
  <build_depend>dvo_ros</build_depend>

  <build_depend>message_generation</build_depend>
  
  <build_depend>sensor_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_filters</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>interactive_markers</build_depend>
    
  <run_depend>libpcl-all-dev</run_depend>
  <run_depend>libopencv-dev</run_depend>
  <run_depend>libg2o</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>

  <run_depend>dvo_core</run_depend>
  <run_depend>dvo_ros</run_depend>

  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>

  <run_depend>sensor_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>message_filters</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>interactive_markers</run_depend>  
</package>
